fix header spacing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -34,11 +34,12 @@ header {
 .wave {
     width: 100%;
     height: 25px;
+    position: absolute;
   }
 
 .dateTimeWeather_container {
     padding: .5%;
-    padding-top: 0pt;
+    padding-top: 5pt;
     margin-top: 0%;
     padding-bottom: 0%;
     margin-bottom: 0%;
